@@ -233,7 +233,8 @@ public:
     void resize(unsigned int width, unsigned int height);
     /// move and resize frame to pox x,y and size width, height
     void moveResize(int x, int y, unsigned int width, unsigned int height, int gravity = ForgetGravity);
-
+    /// move to pos x,y and resize client window to size width, height
+    void moveResizeForClient(int x, int y, unsigned int width, unsigned int height, int gravity = ForgetGravity);
     void setWorkspace(int n);
     void changeBlackboxHints(const BlackboxHints &bh);
     void updateFunctions();
