@@ -1,7 +1,9 @@
 (Format: Year/Month/Day)
 Changes for 0.9.13
 *05/03/16:
-    added new option to specify, on which screen fluxbox should handle 
+  * fix for gravity field on _NET_MOVERESIZE_WINDOW (thanx to Rob Stevens)
+    Ewmh.cc, Window.(cc,hh), FbWinFrame.(cc,hh)
+  * added new option to specify, on which screen fluxbox should handle 
     the windows. default behavior is to handle each available screen. 
     closes #1159809. (Mathias)
 
